--- a/destination.scss
+++ b/destination.scss
@@ -41,3 +41,10 @@ margin-left:1rem;
 #destination-detail{
     margin-top: 1rem;
 }
+   
+.destination-geo{
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
